k8s/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: taskmanager
  labels:
    app: taskmanager-backend
spec:
  type: ClusterIP
  selector:
    app: taskmanager-backend
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
      name: http
