k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: taskmanager
  labels:
    app: mongodb
spec:
  clusterIP: None  # Headless service for StatefulSet
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo
